# event-log-converter

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  conversion.rs  io.rs  lib.rs  main.rs  xes.rs
src/xes/: interval.rs  lifecycle.rs
