[package]
name = "event_log_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
quick-xml = "0.26.0"
serde = { version = "1.0.151", features = ["derive"] }
serde-xml-rs = "0.6.0"
