[package]
name = "event_log_converter"
version = "0.1.0"
edition = "2021"
description = "Event log converters. Supports: XES to CSV."
readme = "README.md"
repository = "https://github.com/iharsuvorau/event-log-converter"
license = "Apache-2.0"
categories = ["event-log", "process-mining", "xes", "csv"]

[lib]
name = "event_log_converter"
path = "src/lib.rs"

[[bin]]
name = "event_log_converter"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
quick-xml = "0.26.0"
serde = { version = "1.0.151", features = ["derive"] }
serde-xml-rs = "0.6.0"
